--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "latest",
     "@supabase/supabase-js": "latest",
+    "@types/web-push": "^3.6.0",
     "autoprefixer": "10.4.14",
     "next": "latest",
     "postcss": "8.4.24",
