added vercel.json file with cron data

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,9 +8,12 @@
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "latest",
     "@supabase/supabase-js": "latest",
+    "@types/node-cron": "^3.0.8",
     "@types/web-push": "^3.6.0",
     "autoprefixer": "10.4.14",
+    "cron": "^2.4.3",
     "next": "latest",
+    "node": "^20.6.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
