--- a/my-app/vercel/vercel.json
+++ b/my-app/vercel/vercel.json
@@ -1,7 +1,7 @@
 {
   "crons": [
     {
-      "path": "/app/api/DailyNotification",
+      "path": "/app/api/cron",
       "schedule": "0 15 * * *"
     }
   ]
