--- a/my-app/vercel.json
+++ b/my-app/vercel.json
@@ -1,7 +1,7 @@
 {
   "crons": [
     {
-      "path": "/api/cron",
+      "path": "/api/DailyNotification",
       "schedule": "0 15 * * *"
     }
   ]
